--- a/CookieClicker/MainWindow.xaml
+++ b/CookieClicker/MainWindow.xaml
@@ -6,7 +6,8 @@
         SizeToContent="Manual"
         WindowStyle="None"
         WindowStartupLocation="CenterScreen"
-        BorderBrush="#6b4532" BorderThickness="5">
+        BorderBrush="#6b4532" BorderThickness="5"
+        Icon="Ressources/icon.ico">
     <Window.Resources>
         <Style x:Key="CustomButtonStyle" TargetType="Button">
             <Setter Property="Background" Value="Transparent"/>
@@ -227,10 +228,11 @@
                         <Image Source="pack://application:,,,/Images/Option.png" Stretch="Fill" />
 
                     </Button>
-
-                    <Button x:Name="StatsButton" FontSize="16" FontWeight="Bold" Background="Transparent" Foreground="White" Margin="0">
+                    
+                    <Button x:Name="StatsButton" FontSize="16" FontWeight="Bold" Background="Transparent" Foreground="White" Margin="0" Click="StatsButton_Click">
                         <Image Source="pack://application:,,,/Images/Statistiques.png" Stretch="Fill" />
                     </Button>
+
                 </StackPanel>
                 <StackPanel Grid.Column="2" Orientation="Vertical" HorizontalAlignment="Right">
                     <Button x:Name="InfoButton" FontSize="16" FontWeight="Bold" Background="Transparent" Foreground="White" Margin="0" Click="InfoButton_Click">
@@ -477,11 +479,7 @@
             </Button.ToolTip>
         </Button>
         <Grid Grid.Column="2" HorizontalAlignment="Center" Margin="0,111,0,0" VerticalAlignment="Top"  Height="480" Width="395">
-            <Frame x:Name="mainFrame" NavigationUIVisibility="Hidden" Margin="0,10,0,0" Height="480" Width="395" VerticalAlignment="Top" />
+            <Frame x:Name="mainFrame" NavigationUIVisibility="Hidden" Height="490" VerticalAlignment="Top" />
         </Grid>
-
-
-
-
     </Grid>
 </Window>
