--- a/CookieClicker/MainWindow.xaml
+++ b/CookieClicker/MainWindow.xaml
@@ -104,18 +104,18 @@
         <Image Source="pack://application:,,,/Images/background.jpg" Stretch="Fill" Grid.ColumnSpan="5" Panel.ZIndex="-1"/>
 
         <!-- Panneau gauche -->
-        <StackPanel Grid.Column="0" Margin="15,10,5,0" VerticalAlignment="Top">
-            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,20,0,0">
+        <StackPanel Grid.Column="0" Margin="15,10,5,0" Canvas.ZIndex="10" VerticalAlignment="Top">
+            <StackPanel Canvas.ZIndex="10" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,20,0,0">
                 <Border Background="Black" CornerRadius="10" Opacity="0.5" Margin="10">
-                    <TextBlock x:Name="BakeryNameTextBlock" Text="Pâtisserie Delicious Gizmo" FontSize="20" FontWeight="Bold" Foreground="White" Padding="10" MouseDown="BakeryNameTextBlock_MouseDown"/>
+                    <TextBlock x:Name="BakeryNameTextBlock" Canvas.ZIndex="10" Text="Pâtisserie Delicious Gizmo" FontSize="20" FontWeight="Bold" Foreground="White" Padding="10" MouseDown="BakeryNameTextBlock_MouseDown"/>
                 </Border>
                 <TextBox x:Name="BakeryNameTextBox" Text="Pâtisserie Delicious Gizmo" FontSize="20" FontWeight="Bold" Foreground="Black" Margin="10" Visibility="Collapsed" KeyDown="BakeryNameTextBox_KeyDown" LostFocus="BakeryNameTextBox_LostFocus"/>
             </StackPanel>
-            <Grid HorizontalAlignment="Center">
+            <Grid HorizontalAlignment="Center" Canvas.ZIndex="10">
                 <Rectangle HorizontalAlignment="Center" Height="46" Stroke="Black" Fill="Black" Opacity="0.5" Width="350"/>
-                <TextBlock x:Name="CookieCountText" Text="0 cookies" FontSize="30" FontWeight="Bold" Foreground="White" HorizontalAlignment="Center"/>
+                <TextBlock x:Name="CookieCountText" Canvas.ZIndex="10" Text="0 cookies" FontSize="30" FontWeight="Bold" Foreground="White" HorizontalAlignment="Center"/>
             </Grid>
-            <TextBlock x:Name="CookiesPerSecondText" Text="par seconde : 0" FontSize="16" Foreground="White" Margin="10" HorizontalAlignment="Center"/>
+            <TextBlock x:Name="CookiesPerSecondText" Canvas.ZIndex="10" Text="par seconde : 0" FontSize="16" Foreground="White" Margin="10" HorizontalAlignment="Center"/>
             <Canvas x:Name="CursorCanvas" Width="200" Height="200" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="0" Margin="40,0,0,0">
                 <Canvas x:Name="CookieCanvas" Grid.Column="2" VerticalAlignment="Top" IsHitTestVisible="True" Height="583" Width="296" HorizontalAlignment="Center" Canvas.Left="-66" Canvas.Top="-174"/>
                 <Button x:Name="CookieButton" Background="Transparent" BorderThickness="0" Width="200" Height="200" Click="CookieButton_Click" HorizontalAlignment="Center" Canvas.Left="-23" VerticalAlignment="Top" Canvas.Top="32">
@@ -228,7 +228,7 @@
                         <Image Source="pack://application:,,,/Images/Option.png" Stretch="Fill" />
 
                     </Button>
-                    
+
                     <Button x:Name="StatsButton" FontSize="16" FontWeight="Bold" Background="Transparent" Foreground="White" Margin="0" Click="StatsButton_Click">
                         <Image Source="pack://application:,,,/Images/Statistiques.png" Stretch="Fill" />
                     </Button>
@@ -266,6 +266,7 @@
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
                     <Grid.RenderTransform>
                         <ScaleTransform ScaleX="1" ScaleY="1"/>
@@ -284,7 +285,8 @@
                     </Grid.Triggers>
                     <Image Source="pack://application:,,,/Images/click.png" Stretch="Fill" Grid.Column="0" Style="{StaticResource ItemImageStyle}" Opacity="0.7"/>
                     <TextBlock x:Name="Item1Count" Style="{StaticResource CounterTextStyle}" Text="0" VerticalAlignment="Top" Margin="258,23,17,0" RenderTransformOrigin="0.49,0.602" Height="28"/>
-                    <TextBlock x:Name="Item1Price" Style="{StaticResource PriceTextStyle}" Text="70 cookies" VerticalAlignment="Top" Margin="72,38,167,0"/>
+                    <Image Source="pack://application:,,,/Ressources/CookiesEffects/Cookies/Miscellaneous/favicon.png" Width="12" Height="12" VerticalAlignment="Top" Margin="71,41,248,0"/>
+                    <TextBlock x:Name="Item1Price" Style="{StaticResource PriceTextStyle}" Text="70 cookies" VerticalAlignment="Top" Margin="87,37,80,0"/>
                     <Button Content="Revendre" Click="SellItem1_Click" Style="{StaticResource CustomButtonStyle}" RenderTransformOrigin="0.742,1.66" Margin="216,39,45,0" Height="21" VerticalAlignment="Top"/>
                     <!-- Tooltip for Cursor -->
                     <Grid.ToolTip>
@@ -301,6 +303,7 @@
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
                     <Grid.RenderTransform>
@@ -320,7 +323,8 @@
                     </Grid.Triggers>
                     <Image Source="pack://application:,,,/Images/grandmere.png" Stretch="Fill" Grid.Column="0" Style="{StaticResource ItemImageStyle}" Opacity="0.7"/>
                     <TextBlock x:Name="Item2Count" Style="{StaticResource CounterTextStyle}" Text="0" VerticalAlignment="Center" Margin="259,0,15,0" Height="24"/>
-                    <TextBlock x:Name="Item2Price" Style="{StaticResource PriceTextStyle}" Text="100 cookies" VerticalAlignment="Top" Margin="71,34,158,0"/>
+                    <Image Source="pack://application:,,,/Ressources/CookiesEffects/Cookies/Miscellaneous/favicon.png" Width="12" Height="12" VerticalAlignment="Top" Margin="70,38,220,0"/>
+                    <TextBlock x:Name="Item2Price" Style="{StaticResource PriceTextStyle}" Text="100 cookies" VerticalAlignment="Top" Margin="84,34,76,0"/>
                     <!-- Tooltip for Grandma -->
                     <Grid.ToolTip>
                         <ToolTip Background="Black" Foreground="White">
@@ -338,6 +342,7 @@
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
                     <Grid.RenderTransform>
@@ -357,7 +362,8 @@
                     </Grid.Triggers>
                     <Image Source="pack://application:,,,/Images/ferme.png" Stretch="Fill" Grid.Column="0" Style="{StaticResource ItemImageStyle}" Opacity="0.7"/>
                     <TextBlock x:Name="Item3Count" Style="{StaticResource CounterTextStyle}" Text="0" VerticalAlignment="Center" Margin="260,0,20,0" Height="25"/>
-                    <TextBlock x:Name="Item3Price" Style="{StaticResource PriceTextStyle}" Text="500 cookies" VerticalAlignment="Top" Margin="71,34,160,0"/>
+                    <Image Source="pack://application:,,,/Ressources/CookiesEffects/Cookies/Miscellaneous/favicon.png" Width="12" Height="12" VerticalAlignment="Top" Margin="70,35,222,0"/>
+                    <TextBlock x:Name="Item3Price" Style="{StaticResource PriceTextStyle}" Text="500 cookies" VerticalAlignment="Top" Margin="84,32,78,0"/>
                     <!-- Tooltip for Farm -->
                     <Grid.ToolTip>
                         <ToolTip Background="Black" Foreground="White">
@@ -374,6 +380,7 @@
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
                     <Grid.RenderTransform>
@@ -393,7 +400,8 @@
                     </Grid.Triggers>
                     <Image Source="pack://application:,,,/Images/mine.png" Stretch="Fill" Grid.Column="0" Style="{StaticResource ItemImageStyle}" Opacity="0.7" Grid.ColumnSpan="3"/>
                     <TextBlock x:Name="Item4Count" Style="{StaticResource CounterTextStyle}" Text="0" VerticalAlignment="Top" Margin="260,23,19,0" Height="24"/>
-                    <TextBlock x:Name="Item4Price" Style="{StaticResource PriceTextStyle}" Text="1000 cookies" VerticalAlignment="Top" Margin="66,35,155,0"/>
+                    <Image Source="pack://application:,,,/Ressources/CookiesEffects/Cookies/Miscellaneous/favicon.png" Width="12" Height="12" VerticalAlignment="Top" Margin="66,35,209,0"/>
+                    <TextBlock x:Name="Item4Price" Style="{StaticResource PriceTextStyle}" Text="1000 cookies" VerticalAlignment="Top" Margin="79,31,76,0"/>
                     <!-- Tooltip for Mine -->
                     <Grid.ToolTip>
                         <ToolTip Background="Black" Foreground="White">
