--- a/CookieClicker/MainWindow.xaml
+++ b/CookieClicker/MainWindow.xaml
@@ -104,18 +104,18 @@
         <Image Source="pack://application:,,,/Images/background.jpg" Stretch="Fill" Grid.ColumnSpan="5" Panel.ZIndex="-1"/>
 
         <!-- Panneau gauche -->
-        <StackPanel Grid.Column="0" Margin="15,10,5,0" Canvas.ZIndex="10" VerticalAlignment="Top">
-            <StackPanel Canvas.ZIndex="10" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,20,0,0">
+        <StackPanel Grid.Column="0" Margin="15,10,5,0" VerticalAlignment="Top">
+            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,20,0,0">
                 <Border Background="Black" CornerRadius="10" Opacity="0.5" Margin="10">
-                    <TextBlock x:Name="BakeryNameTextBlock" Canvas.ZIndex="10" Text="Pâtisserie Delicious Gizmo" FontSize="20" FontWeight="Bold" Foreground="White" Padding="10" MouseDown="BakeryNameTextBlock_MouseDown"/>
+                    <TextBlock x:Name="BakeryNameTextBlock" Text="Pâtisserie Delicious Gizmo" FontSize="20" FontWeight="Bold" Foreground="White" Padding="10" MouseDown="BakeryNameTextBlock_MouseDown"/>
                 </Border>
                 <TextBox x:Name="BakeryNameTextBox" Text="Pâtisserie Delicious Gizmo" FontSize="20" FontWeight="Bold" Foreground="Black" Margin="10" Visibility="Collapsed" KeyDown="BakeryNameTextBox_KeyDown" LostFocus="BakeryNameTextBox_LostFocus"/>
             </StackPanel>
-            <Grid HorizontalAlignment="Center" Canvas.ZIndex="10">
+            <Grid HorizontalAlignment="Center">
                 <Rectangle HorizontalAlignment="Center" Height="46" Stroke="Black" Fill="Black" Opacity="0.5" Width="350"/>
-                <TextBlock x:Name="CookieCountText" Canvas.ZIndex="10" Text="0 cookies" FontSize="30" FontWeight="Bold" Foreground="White" HorizontalAlignment="Center"/>
+                <TextBlock x:Name="CookieCountText" Text="0 cookies" FontSize="30" FontWeight="Bold" Foreground="White" HorizontalAlignment="Center"/>
             </Grid>
-            <TextBlock x:Name="CookiesPerSecondText" Canvas.ZIndex="10" Text="par seconde : 0" FontSize="16" Foreground="White" Margin="10" HorizontalAlignment="Center"/>
+            <TextBlock x:Name="CookiesPerSecondText" Text="par seconde : 0" FontSize="16" Foreground="White" Margin="10" HorizontalAlignment="Center"/>
             <Canvas x:Name="CursorCanvas" Width="200" Height="200" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="0" Margin="40,0,0,0">
                 <Canvas x:Name="CookieCanvas" Grid.Column="2" VerticalAlignment="Top" IsHitTestVisible="True" Height="583" Width="296" HorizontalAlignment="Center" Canvas.Left="-66" Canvas.Top="-174"/>
                 <Button x:Name="CookieButton" Background="Transparent" BorderThickness="0" Width="200" Height="200" Click="CookieButton_Click" HorizontalAlignment="Center" Canvas.Left="-23" VerticalAlignment="Top" Canvas.Top="32">
@@ -234,6 +234,10 @@
                     </Button>
 
                 </StackPanel>
+
+                <!-- Ajout du TextBlock cliquable et animé -->
+                <TextBlock x:Name="DynamicTextBlock" Text="Cliquez-moi" FontSize="16" FontWeight="Bold" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center" MouseLeftButtonDown="DynamicTextBlock_Click" Grid.Column="1"/>
+
                 <StackPanel Grid.Column="2" Orientation="Vertical" HorizontalAlignment="Right">
                     <Button x:Name="InfoButton" FontSize="16" FontWeight="Bold" Background="Transparent" Foreground="White" Margin="0" Click="InfoButton_Click">
                         <Image Source="pack://application:,,,/Images/Info.png" Stretch="Fill" />
