--- a/CookieClicker/InfoPage.xaml
+++ b/CookieClicker/InfoPage.xaml
@@ -1,13 +1,9 @@
-﻿<Window x:Class="CookieClicker.InfoWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Infos" Height="480" Width="395"
-        WindowStyle="None" 
-        ResizeMode="NoResize" 
-        WindowStartupLocation="Manual" 
-        Background="Black"
-        Topmost="True">
-    <Window.Resources>
+﻿<Page x:Class="CookieClicker.View.InfoPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      Title="InfoPage" Background="#262423">
+
+    <Page.Resources>
         <!-- Style pour une scrollbar quasi invisible -->
         <Style x:Key="InvisibleScrollBar" TargetType="{x:Type ScrollBar}">
             <Setter Property="Background" Value="Transparent"/>
@@ -33,35 +29,10 @@
                 </Setter.Value>
             </Setter>
         </Style>
-
-        <!-- Style personnalisé pour le bouton de fermeture -->
-        <Style x:Key="CloseButtonStyle" TargetType="Button">
-            <Setter Property="Background" Value="Black"/>
-            <Setter Property="Foreground" Value="White"/>
-            <Setter Property="BorderBrush" Value="Black"/>
-            <Setter Property="BorderThickness" Value="0"/>
-            <Setter Property="FontWeight" Value="Bold"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="Button">
-                        <Grid Background="{TemplateBinding Background}">
-                            <TextBlock Text="X" Foreground="{TemplateBinding Foreground}" 
-                                       HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        </Grid>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-            <Style.Triggers>
-                <Trigger Property="IsMouseOver" Value="True">
-                    <Setter Property="Background" Value="DarkGray"/>
-                </Trigger>
-            </Style.Triggers>
-        </Style>
-    </Window.Resources>
+    </Page.Resources>
 
     <Grid>
-        <Button Style="{StaticResource CloseButtonStyle}" Width="30" Height="30" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10" Click="CloseButton_Click"/>
-        <TextBlock Text="À propos de :" FontSize="24" FontWeight="Bold" Foreground="White" VerticalAlignment="Top" Margin="10,50,10,0"/>
+        <TextBlock Text="À propos de :" FontSize="24" FontWeight="Bold" Foreground="White" VerticalAlignment="Top" Margin="10,34,10,0"/>
         <ScrollViewer VerticalScrollBarVisibility="Auto" Margin="10,100,10,10">
             <ScrollViewer.Style>
                 <Style TargetType="ScrollViewer">
@@ -117,4 +88,4 @@
             </StackPanel>
         </ScrollViewer>
     </Grid>
-</Window>
+</Page>
